force-app/main/default/objects/Benefit_Design_vod__c/fields/BOT_Benefit_Design_ID__c.field-meta.xml
<CustomField>
    <fullName>BOT_Benefit_Design_ID__c</fullName>
    <description>It is created by BusinessOne Technologies. It is used to store BOT Formulary ID.</description>
    <externalId>true</externalId>
    <label>Benefit Design ID</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>