force-app/main/default/objects/Benefit_Design_vod__c/fields/BOT_Formulary_Lives_Med__c.field-meta.xml
<CustomField>
    <fullName>BOT_Formulary_Lives_Med__c</fullName>
    <description>To store medical formulary lives</description>
    <label>Formulary Lives Med</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>