force-app/main/default/objects/Benefit_Design_vod__c/fields/Type_vod__c.field-meta.xml
<CustomField>
    <fullName>Type_vod__c</fullName>
    <description>The value in the type field (Commercial, VA, Medicaid, etc.) is cascaded down to the Benefit Design Lines and controls what Status and Restrictions are valid. If this type field is changed, it will cascade down to the Benefit Design Lines.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Medicare</fullName>
            </value>
            <value>
                <fullName>Medicaid</fullName>
            </value>
            <value>
                <fullName>VA</fullName>
            </value>
            <value>
                <fullName>DOD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>