force-app/main/default/objects/Benefit_Design_vod__c/recordTypes/BOT_Benefit_Design.recordType-meta.xml
<RecordType>
    <fullName>BOT_Benefit_Design</fullName>
    <active>true</active>
    <description>It is created by BusinessOne Technologies Inc and used to store BOT Formulary records.</description>
    <label>BOT_Benefit Design</label>
</RecordType>